force-app/main/default/objects/ErrorLog__c/fields/AffectedUser__c.field-meta.xml
<CustomField>
    <fullName>AffectedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The use who is affected with the error.</inlineHelpText>
    <label>Affected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>