force-app/main/default/objects/ErrorLog__c/fields/LogDateTime__c.field-meta.xml
<CustomField>
    <fullName>LogDateTime__c</fullName>
    <label>Log Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>