force-app/main/default/objects/ErrorLog__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <inlineHelpText>The record id of the record that is affected</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>