force-app/main/default/objects/ErrorLog__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <inlineHelpText>The related record Name field to identify which record is failing.</inlineHelpText>
    <label>Parent Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>