force-app/main/default/objects/ErrorLog__c/fields/RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecord__c</fullName>
    <formula>IF(
  AND( ParentId__c &lt;&gt; null, ParentName__c &lt;&gt; null ),
  HYPERLINK(&quot;/lightning/r/ErrorLog__c/&quot;&amp;ParentId__c&amp;&quot;/view&quot;, ParentName__c, &quot;_self&quot;),
  IF(
    ParentId__c &lt;&gt; null,
    HYPERLINK(&quot;/lightning/r/ErrorLog__c/&quot;&amp;ParentId__c&amp;&quot;/view&quot;, ParentName__c, &quot;_self&quot;),
    &quot;&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>