force-app/main/default/objects/ErrorLog__c/validationRules/Error_Message_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Message_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  ErrorMessage__c  )</errorConditionFormula>
    <errorDisplayField>ErrorMessage__c</errorDisplayField>
    <errorMessage>Error Message is required!</errorMessage>
</ValidationRule>